# cvtxtclient

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.slim.txt  requirements.txt
cvtxtclient/api/: config.py  controller.py  exceptions.py
cvtxtclient/models/: __init__.py  ball_detector.py  breakpoint.py  camera_config.py  color_detector.py  controller.py  counter.py  debugger_arguments.py  debugger_response.py  enabled.py  expression.py  image_recognition_config.py  input.py  line_detector.py  motion_detector.py  motor.py  output.py  program_location.py  rectangle.py  servomotor.py
js-ui/: camera_receiver.js  cat_ctrl.js  index.html  styles.css
tests/camera/: camera_test_window.py
