[tool.poetry]
name = "cvtxtclient"
version = "0.1.0"
description = ""
authors = ["Jan Philipp Schneider <jp-schneider@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.11.17"
pydantic = "^2.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
